@@ -26,6 +26,7 @@
 
     (module-define! m 'dimension-variables
 		    '(pt mm cm in staffheight staff-space
+			 linewidth
 			 staffspace linethickness ledgerlinethickness
 			 blotdiameter interscoreline))
     ))
@@ -111,14 +112,12 @@
       ((scale (ly:bookpaper-outputscale bookpap))
        (new-pap (ly:output-def-clone pap))
        (dim-vars (ly:paper-lookup pap 'dimension-variables))
-       (scope (ly:output-def-scope new-pap))
-       )
+       (scope (ly:output-def-scope new-pap)))
 
     (for-each
      (lambda (v)
        (module-define! scope v
-		       (* (ly:paper-lookup pap v) scale)))
-
+		       (/ (ly:paper-lookup pap v) scale)))
      
      dim-vars)
 
