@@ -1,3 +1,8 @@
+2004-05-24  Han-Wen Nienhuys   <hanwen@xs4all.nl>
+
+	* scm/paper.scm (paper-set-staff-size): scale linewidth too.
+	(scale-paper): divide by scale.
+
 2004-05-19  Han-Wen Nienhuys   <hanwen@xs4all.nl>
 
 	* lily/rest-collision.cc (do_shift): also do nothing for the (0,2)
